java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateField2-hints.pass
Create field test in org.netbeans.test.java.hints.CreateField2
Create parameter test
Create local variable test
